Actually properly fix frontend response handling

--- a/templates/index.templ
+++ b/templates/index.templ
@@ -1,7 +1,5 @@
 package templates
 
-import "app.pacuare.dev/components/table"
-import "app.pacuare.dev/components/card"
 import "app.pacuare.dev/components/alert"
 import "app.pacuare.dev/components/icon"
 import "app.pacuare.dev/components/editor"
@@ -10,6 +8,7 @@ import "app.pacuare.dev/components/accountsettings"
 import "app.pacuare.dev/components/drawer"
 import "app.pacuare.dev/components/docs"
 import "app.pacuare.dev/components/tabs"
+import "app.pacuare.dev/components/results"
 import . "github.com/icza/gox/gox"
 import "embed"
 
@@ -35,7 +34,7 @@ templ Index(email string, fullAccess bool, returnedApiKey string) {
 				<template x-if="docsOpen">@icon.BookOpen(icon.Props{Size: 16})</template>
 			}
 			@alert.Alert(alert.Props{
-				Variant: If(fullAccess, alert.VariantDestructive, alert.VariantDefault), 
+				Variant: If(fullAccess, alert.VariantDestructive, alert.VariantDefault),
 				Class: If(!fullAccess, "border-emerald-700 text-emerald-700", ""),
 			}) {
 				if fullAccess {
@@ -80,7 +79,7 @@ templ Index(email string, fullAccess bool, returnedApiKey string) {
 					@tabs.Trigger(tabs.TriggerProps{
 						Value: "python",
 					}) { Python }
-				}	
+				}
 				@tabs.Content(tabs.ContentProps{
 					Value: "sql",
 					IsActive: true,
@@ -88,46 +87,8 @@ templ Index(email string, fullAccess bool, returnedApiKey string) {
 				}) {
 					<div class="grid grid-rows-1 grid-cols-2 gap-6 h-full max-h-full w-full max-w-full justify-self-stretch">
 						@editor.Editor("query-editor")
-						
-						@card.Card(card.Props{Class: "flex flex-col items-stretch translate-0 box-border"}) {
-							<template x-if="'error' in $store.results.currentResults">
-								@alert.Alert(alert.Props{Class: "m-2 w-[calc(100%-(var(--spacing)*4))]", Attributes: templ.Attributes{"x-text": "$store.results.currentResults.error"}, Variant: alert.VariantDestructive})
-							</template>
-							<template x-if="!('error' in $store.results.currentResults)">
-								@table.Table(table.Props{Class: "h-full max-h-full max-w-full caption-top"}) {
-									@table.Caption(table.CaptionProps{Class: "block fixed bottom-4 left-[50%] -translate-x-1/2 p-2 rounded", Attributes: templ.Attributes{"style": "backdrop-filter: blur(10px)"}}) {
-										<span x-text="$store.results.currentResults.length"/> rows in result
-									}
 
-									@table.Header() {
-										@table.Row() {
-											<template x-for="key in Object.keys($store.results.currentResults[0])">
-												@table.Head(table.HeadProps{Attributes: templ.Attributes{"x-text": "key"}})
-											</template>
-										}
-									}
-
-									@table.Body() {
-										<template x-for="row in $store.results.currentResults">
-											@table.Row() {
-												<template x-for="value in Object.values(row)">
-													@table.Cell(table.CellProps{Attributes: templ.Attributes{"x-text": "value"}})
-												</template>
-											}
-										</template>
-									}
-								}
-							</template>
-							<template x-if="!('error' in $store.results.currentResults) && $store.results.currentResults.length > 0">
-								@button.Button(button.Props{
-									Size: button.SizeIcon,
-									Class: "fixed bottom-3 right-3",
-									Attributes: templ.Attributes{"title": "Download results as CSV", "x-bind": "exportCSV"},
-								}) {
-									@icon.FileDown(icon.Props{Size: 16})
-								}
-							</template>
-						}
+						@results.ResultsView()
 					</div>
 				}
 				@tabs.Content(tabs.ContentProps{
